--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
